--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class='grey lighten-5'>
+<html class='white'>
   <head>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -13,7 +13,7 @@
     </script>
   </head>
   <body>
-    <nav class='grey lighten-5' role='navigation'>
+    <nav class='white' role='navigation'>
       <div class='nav-wrapper container'>
         <ul class='right hide-on-med-and-down'>
           <li class="<%= active_link_to_class('#', active:[['static_pages'],['index']]) %>">
@@ -48,7 +48,7 @@
         <a href='#' data-activates='nav-mobile' class='button-collapse right'><i class='grey-text mdi-navigation-menu'></i></a>
       </div>
     </nav>
-    <main class='grey lighten-5'>
+    <main class='white'>
       <br>
       <%= custom_bootstrap_flash %>
       <%= yield %>
@@ -73,7 +73,7 @@
           <div class='col l4 s12'>
             <br>
             <a href='/the_truth_about_masturbation_send_me_my_free_chapter'
-               class='waves-effect waves-light btn-large light-blue darken-4 white-text'>
+               class='waves-effect waves-light btn-large blue white-text'>
               Get The First Chapter Free
             </a>
           </div>
