--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,6 +1,6 @@
 <title>The Truth About Masturbation eBook // BOOK</title>
 <div class='row container'>
-  <h1 class='grey-text text-darken-3'>The Truth About Masturbation</h1>
+  <h1 class='grey-text text-darken-3'>THE TRUTH ABOUT MASTURBATION</h1>
 
   <div class='hide-on-small-only'>
     <div class='col m7'>
@@ -10,12 +10,12 @@
         history.
       </h5>
       <br><br>
-      <a class='waves-effect waves-light btn-large light-blue darken-4 white-text'
+      <a class='waves-effect waves-light btn-large blue white-text'
          style='width:300px;'>
         Pre-order the eBook!
       </a>
       <br><br>
-      <a class='waves-effect waves-light btn-large light-blue darken-4 white-text'
+      <a class='waves-effect waves-light btn-large blue white-text'
          style='width:300px;'
          href='/the_truth_about_masturbation_send_me_my_free_chapter'>
         Get the First Chapter Free!
@@ -33,12 +33,12 @@
       history.
     </h4>
     <br><br>
-    <a class='waves-effect waves-light btn-large light-blue darken-4 white-text'
+    <a class='waves-effect waves-light btn-large blue white-text'
        style='width:300px;'>
       Pre-order the eBook!
     </a>
     <br><br>
-    <a class='waves-effect waves-light btn-large light-blue darken-4 white-text'
+    <a class='waves-effect waves-light btn-large blue white-text'
        style='width:300px;'
        href='/the_truth_about_masturbation_send_me_my_free_chapter'>
       Get the First Chapter Free!
@@ -65,7 +65,7 @@
             <label for='email'>Email</label>
           </div>
           <div class='col s12 m6'>
-            <button class='btn btn-large waves-effect waves-light light-blue darken-4 white-text'>
+            <button class='btn btn-large waves-effect waves-light blue white-text'>
               Send me my free chapter!
               <i class='mdi-content-send right'></i>
             </button>
