--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,13 +1,14 @@
 <title>The Truth About Masturbation eBook // BOOK</title>
 <div class='row container'>
-  <h1 class='grey-text text-darken-3'>THE TRUTH ABOUT MASTURBATION</h1>
-
+  <h1 class='grey-text text-darken-3' style='font-size:375%;'>THE TRUTH ABOUT MASTURBATION</h1>
+  <br>
   <div class='hide-on-small-only'>
     <div class='col m7'>
       <h5 class='grey-text text-darken-3'>
-        Is masturbation a sin? A thought provoking journey through the varying
-        religious, societal, and scientific views on masturbation throughout
-        history.
+        Is masturbation a sin?<br><br>Get the answers you're looking for. Take a
+        thought provoking journey through the varying religious, societal, and
+        scientific views on masturbation throughout history.<br><br>Pre-Order the eBook today!
+
       </h5>
       <br><br>
       <a class='waves-effect waves-light btn-large blue white-text'
@@ -44,8 +45,11 @@
       Get the First Chapter Free!
     </a>
   </div>
+  <br><br>
+  <center>
+    <%= image_tag('http://www.vncsolutions.com/wp-content/uploads/2015/01/amazon-183750_640.png', size:'300x165') %>
+  </center>
 </div>
-<br>
 <div class='row grey darken-3'>
   <div class='container'>
     <%= form_for Contact.new do |f| %>
@@ -53,14 +57,10 @@
         <div class='row'>
           <br>
           <h4 class='white-text'>
-            Get the first chapter free! Just enter your first name and email!
+            Get the first chapter free! Just enter your email.
           </h4>
-          <br><br>
-          <div class='input-field col s12 m2'>
-            <%= f.text_field :first_name, class:'white-text' %>
-            <label for='first_name'>First Name</label>
-          </div>
-          <div class='input-field col s12 m4'>
+          <br>
+          <div class='input-field col s12 m6'>
             <%= f.text_field :email, class:'white-text' %>
             <label for='email'>Email</label>
           </div>
@@ -73,33 +73,34 @@
         </div>
       </form>
     <% end %>
-    <br>
+    <p class='white-text'>Don't worry, we won't EVER spam you or sell your email :-)</p><br><br>
   </div>
 </div>
 <div class='slider'>
   <ul class='slides grey lighten-5'>
     <li>
       <img src="#"/>
-      <div class='caption left-align'>
-        <h3 class='grey-text text-darken-3'>Is masturbation a sin? </h3>
+      <div class='caption center-align'>
+        <h2 class='grey-text text-darken-3'>Is masturbation a sin? </h2>
         <h5 class='grey-text text-darken-3'>
-          You'll learn what the world's religions teach on the subject of masturbation.
+          Learn what the world's religions teach on the subject of masturbation.
         </h5>
       </div>
     </li>
     <li>
-      <div class='caption left-align'>
-        <h3 class='grey-text text-darken-3'>Who says you shouldn't masturbate?</h3>
+      <div class='caption center-align'>
+        <h2 class='grey-text text-darken-3'>Who says you can't masturbate?</h2>
         <h5 class='grey-text text-darken-3'>
-          You'll learn of the extreme measures taken by some to prevent others from masturbating.
+          You'll be shocked to hear the extreme measures taken to prevent masturbation.
         </h5>
       </div>
     </li>
     <li>
-      <div class='caption left-align'>
-        <h3 class='grey-text text-darken-3'>Is masturbation bad for you?</h3>
+      <div class='caption center-align'>
+        <h2 class='grey-text text-darken-3'>Is masturbation bad for you?</h2>
         <h5 class='grey-text text-darken-3'>
-          You'll learn the scientific intricacies of the biology behind masturbation.
+          We'll show you the good and bad of how masturbation affects on your
+          mind, body and spiritual life.
         </h5>
       </div>
     </li>
@@ -115,8 +116,8 @@
           <i class="medium mdi-social-person"></i>
         </div>
         <div class='col s10'>
-          <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-          <strong>-John W</strong>
+          <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor."</p>
+          <strong>John W</strong>
         </div>
       </div>
     </div>
@@ -126,8 +127,8 @@
           <i class="medium mdi-social-person"></i>
         </div>
         <div class='col s10'>
-          <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-          <strong>-Jacob T</strong>
+          <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor."</p>
+          <strong>Jacob T</strong>
         </div>
       </div>
     </div>
@@ -137,8 +138,8 @@
           <i class="medium mdi-social-person"></i>
         </div>
         <div class='col s10'>
-          <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-          <strong>-Jeff A</strong>
+          <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor."</p>
+          <strong>Jeff A</strong>
         </div>
       </div>
     </div>
@@ -148,8 +149,8 @@
           <i class="medium mdi-social-person"></i>
         </div>
         <div class='col s10'>
-          <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-          <strong>-Wayne J</strong>
+          <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor."</p>
+          <strong>Wayne J</strong>
           <br><br><br><br>
         </div>
       </div>
@@ -205,14 +206,7 @@
   </div>
 </div>
 <br><br><br>
-<div class='row grey darken-3 white-text' style='height: 200px;'>
-  <div class='container'>
-    <br><br>
-    <center>
-      <h4>Featured On!</h4>
-    </center>
-  </div>
-</div>
+<!-- <br><br><br>
 <div class='container'>
   <br><br>
   <center>
@@ -220,4 +214,4 @@
     <%= image_tag('http://www.vncsolutions.com/wp-content/uploads/2015/01/amazon-183750_640.png', class:'hide-on-small-only') %>
     <%= image_tag('http://www.vncsolutions.com/wp-content/uploads/2015/01/amazon-183750_640.png', size:'300x200', class:'hide-on-med-and-up') %>
   </center>
-</div>
+</div> -->
