--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -16,6 +16,10 @@ body {
   }
 }
 
+.slider .indicators .indicator-item.active {
+  background-color: #2196F3 !important;
+}
+
 main {
   flex: 1 0 auto;
 }
