Landing page updates

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,17 +1,12 @@
 <title>The Truth About Masturbation eBook // Get Your Free Chapter</title>
+<center><h1 class='grey-text text-darken-3'>ENTER YOUR EMAIL BELOW</h1></center>
 <div class='container'>
   <%= form_for Contact.new do |f| %>
     <form>
       <div class='row'>
         <div class='input-field col s12'>
-          <%= f.text_field :first_name %>
-          <label for='first_name'>First Name</label>
-        </div>
-      </div>
-      <div class='row'>
-        <div class='input-field col s12'>
           <%= f.text_field :email %>
-          <label for='email'>Email</label>
+          <label for='email'>Enter Your Email Here</label>
         </div>
       </div>
       <button class='btn btn-large waves-effect waves-light blue white-text'>
@@ -21,6 +16,7 @@
     </form>
   <% end %>
 </div>
+<br><br><br><br><br><br>
 
 <style>
 /* label color */
