--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,4 +1,13 @@
 <title>The Truth About Masturbation eBook // BOOK</title>
+<meta name='description'
+      content="Is masturbation a sin? Get the answers you're looking for. Take a
+               thought provoking journey through the varying religious, societal,
+               and scientific views on masturbation throughout history.">
+<meta name='keywords'
+      content='s masturbation a sin, is masturbation wrong, is masturbation healthy,
+      is masturbation a sin in islam, is masturbation a sin in christianity,
+      is it bad to masturbate, is masturbation harmful,
+      is masturbation a sin in catholicism, why do we masturbate'>
 <div class='row container'>
   <h1 class='grey-text text-darken-3' style='font-size:375%;'>THE TRUTH ABOUT MASTURBATION</h1>
   <br>
@@ -7,11 +16,13 @@
       <h5 class='grey-text text-darken-3'>
         Is masturbation a sin?<br><br>Get the answers you're looking for. Take a
         thought provoking journey through the varying religious, societal, and
-        scientific views on masturbation throughout history.<br><br>Pre-Order the eBook today!
-
+        scientific views on masturbation throughout history.<br><br>Coming soon!
+        Amazon Kindle and PDF release in July 2015.<br><br>
+        Enter your email and we will send you a free chapter once it's ready.
       </h5>
       <br><br>
-      <a class='waves-effect waves-light btn-large blue white-text'
+      <a href='http://www.amazon.com/dp/B00X508DVK'
+         class='waves-effect waves-light btn-large blue white-text'
          style='width:300px;'>
         Pre-order the eBook!
       </a>
@@ -19,22 +30,43 @@
       <a class='waves-effect waves-light btn-large blue white-text'
          style='width:300px;'
          href='/the_truth_about_masturbation_send_me_my_free_chapter'>
-        Get the First Chapter Free!
+        send me some free content!
       </a>
     </div>
     <div class='col m5'>
-      <%= image_tag('/masturbation.png', size: '300x450', class:"z-depth-2") %>
+      <center>
+        <%= link_to image_path('http://www.amazon.com/dp/B00X508DVK'), title: "The Truth About Masturbation" do %>
+          <%= image_tag('/thetruthaboutmasturbation.jpg', size: '300x450', class:'z-depth-2',
+                        alt:'Book cover for The Truth About Masturbation',
+                        title:'The Truth About Masturbation Book Cover') %>
+        <% end %>
+        <br><br>
+        <%= link_to image_path('http://www.amazon.com/dp/B00X508DVK'), title: "The Truth About Masturbation" do %>
+          <%= image_tag('http://www.vncsolutions.com/wp-content/uploads/2015/01/amazon-183750_640.png', size:'300x165') %>
+        <% end %>
+      </center>
     </div>
   </div>
   <div class='hide-on-med-and-up'>
-    <%= image_tag('/masturbation.png', size: '300x450', class:"z-depth-2") %>
+    <center>
+      <%= link_to image_path('http://www.amazon.com/dp/B00X508DVK'), title: "The Truth About Masturbation" do %>
+        <%= image_tag('/thetruthaboutmasturbation.jpg', size: '300x450', class:'z-depth-2',
+                      alt:'Book cover for The Truth About Masturbation',
+                      title:'The Truth About Masturbation Book Cover') %>
+      <% end %>
+      <br><br>
+      <%= link_to image_path('http://www.amazon.com/dp/B00X508DVK'), title: "The Truth About Masturbation" do %>
+        <%= image_tag('http://www.vncsolutions.com/wp-content/uploads/2015/01/amazon-183750_640.png', size:'300x165') %>
+      <% end %>
+    </center>
     <h4 class='grey-text text-darken-3'>
       Is masturbation a sin? A thought provoking journey through the varying
       religious, societal, and scientific views on masturbation throughout
       history.
     </h4>
     <br><br>
-    <a class='waves-effect waves-light btn-large blue white-text'
+    <a href='http://www.amazon.com/dp/B00X508DVK'
+       class='waves-effect waves-light btn-large blue white-text'
        style='width:300px;'>
       Pre-order the eBook!
     </a>
@@ -42,13 +74,9 @@
     <a class='waves-effect waves-light btn-large blue white-text'
        style='width:300px;'
        href='/the_truth_about_masturbation_send_me_my_free_chapter'>
-      Get the First Chapter Free!
+      send me some free content!
     </a>
   </div>
-  <br><br>
-  <center>
-    <%= image_tag('http://www.vncsolutions.com/wp-content/uploads/2015/01/amazon-183750_640.png', size:'300x165') %>
-  </center>
 </div>
 <div class='row grey darken-3'>
   <div class='container'>
@@ -66,7 +94,7 @@
           </div>
           <div class='col s12 m6'>
             <button class='btn btn-large waves-effect waves-light blue white-text'>
-              Send me my free chapter!
+              Sign Up for my free chapter!
               <i class='mdi-content-send right'></i>
             </button>
           </div>
@@ -107,7 +135,8 @@
   </ul>
 </div>
 <br><br>
-<div class='row grey darken-3 white-text'>
+<hr>
+<!-- <div class='row grey darken-3 white-text'>
   <br><br><br><br>
   <div class='container'>
     <div class='col m6 s12'>
@@ -157,7 +186,7 @@
     </div>
   </div>
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-</div>
+</div> -->
 <br><br>
 <div class='container'>
   <h2 class='grey-text text-darken-3'>What Gets Covered?</h2>
@@ -172,8 +201,7 @@
       <ul>
         <li><b>Religion</b></li>
         <li>Is masturbation a sin?</li>
-        <li>-According to Christianity</li>
-        <li>-According to Judaism</li>
+        <li>-According to Christianity and Judaism</li>
         <li>-According to Islam</li>
         <li>-Eastern religions</li>
         <li>-Other views</li>
