--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,17 @@
-<!DOCTYPE html>
-<html class='grey lighten-5'>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<html lang='en' class='grey lighten-5'>
   <head>
+    <meta charset='UTF-8'>
+    <meta name='author' content='Michael Pierce'>
+    <meta name='google' value='NoTranslate'/>
+    <meta name='geo.region' content='US-CO' />
+    <meta name='geo.placename' content='Denver' />
+    <meta name='geo.position' content='39.739236;-104.990251' />
+    <meta name='ICBM' content='39.739236, -104.990251' />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0 user-scalable=no'/>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-    <%= csrf_meta_tags %>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.0/css/materialize.min.css'>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/js/materialize.min.js'></script>
-    <script>
-    $(document).ready(function(){
-      $('.slider').slider({full_width: true, indicators: true, height: 300});
-    });
-    </script>
+    <%= csrf_meta_tags %>
   </head>
   <body>
     <nav class='grey lighten-5' role='navigation'>
@@ -19,29 +20,32 @@
           <li class="<%= active_link_to_class('#', active:[['static_pages'],['index']]) %>">
             <a href='/' class='grey-text text-darken-2'>BOOK</a>
           </li>
-          <li class="<%= active_link_to_class('#', active:[['static_pages'],['quotes']]) %>">
+          <!-- <li class="<%= active_link_to_class('#', active:[['static_pages'],['quotes']]) %>">
             <a href='/the_truth_about_masturbation_quotes' class='grey-text text-darken-2'>QUOTES</a>
           </li>
           <li class="<%= active_link_to_class('#', active:[['static_pages'],['blog', 'article_one', 'article_two', 'article_three']]) %>">
             <a href='/blog' class='grey-text text-darken-2'>BLOG</a>
-          </li>
-          <li>
+          </li> -->
+          <!-- <li>
             <a href='#' class='grey-text text-darken-2'>PRE-ORDER THE BOOK</a>
-          </li>
+          </li> -->
         </ul>
         <ul id='nav-mobile' class='side-nav'>
           <li class="<%= active_link_to_class('#', active:[['static_pages'],['index']]) %>">
             <a href='/' class='grey-text text-darken-2'>BOOK</a>
           </li>
-          <li class="<%= active_link_to_class('#', active:[['static_pages'],['quotes']]) %>">
+          <li class="<%= active_link_to_class('#', active:[['contacts'],['new']]) %>">
+            <a href='/the_truth_about_masturbation_send_me_my_free_chapter' class='grey-text text-darken-2'>SIGN UP FOR UPDATES</a>
+          </li>
+          <!-- <li class="<%= active_link_to_class('#', active:[['static_pages'],['quotes']]) %>">
             <a href='/the_truth_about_masturbation_quotes' class='grey-text text-darken-2'>QUOTES</a>
           </li>
           <li class="<%= active_link_to_class('#', active:[['static_pages'],['blog']]) %>">
             <a href='/blog' class='grey-text text-darken-2'>BLOG</a>
-          </li>
-          <li>
+          </li> -->
+          <!-- <li>
             <a href='#' class='grey-text text-darken-2'>PRE-ORDER THE BOOK</a>
-          </li>
+          </li> -->
         </ul>
         <div class='hide-on-med-and-up' style='float:left;'>
         </div>
@@ -81,13 +85,21 @@
       </div>
       <div class='footer-copyright'>
         <div class='container'>
-          © Ex nihilo Software LLC 2015
+          © Ex Nihilo Publishing 2015
         </div>
       </div>
     </footer>
   </body>
 </html>
 
+<!-- Scripts -->
+<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/js/materialize.min.js'></script>
+<script>
+$(document).ready(function(){
+  $('.slider').slider({full_width: true, indicators: true, height: 300});
+});
+</script>
 <script>
 (function($){
   $(function(){
