Landing page updates

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -16,6 +16,10 @@ body {
   }
 }
 
+.header-font {
+  font-size:375%;
+}
+
 .slider .indicators .indicator-item.active {
   background-color: #2196F3 !important;
 }
