--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -8,38 +8,41 @@
       is masturbation a sin in islam, is masturbation a sin in christianity,
       is it bad to masturbate, is masturbation harmful,
       is masturbation a sin in catholicism, why do we masturbate'>
+
 <div class='row container'>
-  <h1 class='grey-text text-darken-3' style='font-size:375%;'>THE TRUTH ABOUT MASTURBATION</h1>
+  <h1 class='grey-text text-darken-3 header-font'>
+    THE TRUTH ABOUT MASTURBATION
+  </h1>
   <br>
   <div class='hide-on-small-only'>
     <div class='col m7'>
       <h5 class='grey-text text-darken-3'>
         Is masturbation a sin?<br><br>Get the answers you're looking for. Take a
         thought provoking journey through the varying religious, societal, and
-        scientific views on masturbation throughout history.<br><br>Coming soon!
-        Amazon Kindle and PDF release in July 2015.<br><br>
-        Enter your email and we will send you a free chapter once it's ready.
+        scientific views on masturbation throughout history.<br><br>
+        Available for Amazon preorder today. Coming July 2015!<br><br>
+        Enter your email below and we will send you a free chapter today.
       </h5>
       <br><br>
       <a href='http://www.amazon.com/dp/B00X508DVK'
          class='waves-effect waves-light btn-large blue white-text'
          style='width:300px;'>
-        Pre-order the eBook!
+        Pre-order the eBook
       </a>
       <br><br>
       <a class='waves-effect waves-light btn-large blue white-text'
          style='width:300px;'
          href='/the_truth_about_masturbation_send_me_my_free_chapter'>
-        send me some free content!
+         send me some free content
       </a>
     </div>
     <div class='col m5'>
       <center>
-        <%= link_to image_path('http://www.amazon.com/dp/B00X508DVK'), title: "The Truth About Masturbation" do %>
-          <%= image_tag('/thetruthaboutmasturbation.jpg', size: '300x450', class:'z-depth-2',
-                        alt:'Book cover for The Truth About Masturbation',
-                        title:'The Truth About Masturbation Book Cover') %>
-        <% end %>
+        <a href='http://www.amazon.com/dp/B00X508DVK'>
+          <img title='The Truth About Masturbation'
+               alt='Book cover for The Truth About Masturbation'
+               src='/images/the_truth_about_masturbation.jpg'>
+        </a>
         <br><br>
         <%= link_to image_path('http://www.amazon.com/dp/B00X508DVK'), title: "The Truth About Masturbation" do %>
           <%= image_tag('http://www.vncsolutions.com/wp-content/uploads/2015/01/amazon-183750_640.png', size:'300x165') %>
@@ -49,11 +52,12 @@
   </div>
   <div class='hide-on-med-and-up'>
     <center>
-      <%= link_to image_path('http://www.amazon.com/dp/B00X508DVK'), title: "The Truth About Masturbation" do %>
-        <%= image_tag('/thetruthaboutmasturbation.jpg', size: '300x450', class:'z-depth-2',
-                      alt:'Book cover for The Truth About Masturbation',
-                      title:'The Truth About Masturbation Book Cover') %>
-      <% end %>
+      <br><br>
+      <a href='http://www.amazon.com/dp/B00X508DVK'>
+        <img title='The Truth About Masturbation'
+             alt="Book cover for The Truth About Masturbation"
+             src='/images/the_truth_about_masturbation.jpg'>
+      </a>
       <br><br>
       <%= link_to image_path('http://www.amazon.com/dp/B00X508DVK'), title: "The Truth About Masturbation" do %>
         <%= image_tag('http://www.vncsolutions.com/wp-content/uploads/2015/01/amazon-183750_640.png', size:'300x165') %>
@@ -234,12 +238,3 @@
   </div>
 </div>
 <br><br><br>
-<!-- <br><br><br>
-<div class='container'>
-  <br><br>
-  <center>
-    <h4 class='grey-text text-darken-3'>Pre-Order the eBook on Amazon Today!</h4>
-    <%= image_tag('http://www.vncsolutions.com/wp-content/uploads/2015/01/amazon-183750_640.png', class:'hide-on-small-only') %>
-    <%= image_tag('http://www.vncsolutions.com/wp-content/uploads/2015/01/amazon-183750_640.png', size:'300x200', class:'hide-on-med-and-up') %>
-  </center>
-</div> -->
