--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <meta name='geo.position' content='39.739236;-104.990251' />
     <meta name='ICBM' content='39.739236, -104.990251' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0 user-scalable=no'/>
+    <meta name="google-site-verification" content="KiEonpEBqGFU1pLZMS8E4rvpgjk_Q_UbcOJLgHdqwVY" />
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.0/css/materialize.min.css'>
     <%= csrf_meta_tags %>
