More simple email sign up

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,9 +36,6 @@
           <li class="<%= active_link_to_class('#', active:[['static_pages'],['index']]) %>">
             <a href='/' class='grey-text text-darken-2'>BOOK</a>
           </li>
-          <li class="<%= active_link_to_class('#', active:[['contacts'],['new']]) %>">
-            <a href='/the_truth_about_masturbation_send_me_my_free_chapter' class='grey-text text-darken-2'>SIGN UP FOR UPDATES</a>
-          </li>
           <!-- <li class="<%= active_link_to_class('#', active:[['static_pages'],['quotes']]) %>">
             <a href='/the_truth_about_masturbation_quotes' class='grey-text text-darken-2'>QUOTES</a>
           </li>
@@ -78,7 +75,7 @@
           </div>
           <div class='col l4 s12'>
             <br>
-            <a href='/the_truth_about_masturbation_send_me_my_free_chapter'
+            <a href='#send_me_more'
                class='waves-effect waves-light btn-large blue white-text'>
               Get The First Chapter Free
             </a>
