--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -32,7 +32,7 @@
       <br><br>
       <a class='waves-effect waves-light btn-large blue white-text'
          style='width:300px;'
-         href='/the_truth_about_masturbation_send_me_my_free_chapter'>
+         href='#send_me_more'>
          send me some free content
       </a>
     </div>
@@ -77,13 +77,13 @@
     <br><br>
     <a class='waves-effect waves-light btn-large blue white-text'
        style='width:300px;'
-       href='/the_truth_about_masturbation_send_me_my_free_chapter'>
+       href='#send_me_more'>
       send me some free content!
     </a>
   </div>
 </div>
 <div class='row grey darken-3'>
-  <div class='container'>
+  <div class='container' id='send_me_more'>
     <%= form_for Contact.new do |f| %>
       <form>
         <div class='row'>
